# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt
mazegen/: __init__.py  control.py  generator.py  parser.py
src/mazegen/: generator.py  parser.py
src/mazegen.egg-info/: PKG-INFO  SOURCES.txt
