[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
authors = [
    { name="Yakhyo Saidkhujaev", email="ysaikhuj@student.42istanbul.com.tr" },
    { name="Volkan AKTAŞ", email="vaktas@student.42istanbul.com.tr" }
]
description = "A reusable 42 maze generator package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
